crates/querygpt-core/tests/snapshots/pipeline_sql_snapshots__pipeline_sql__prepaid_apac_export_pagination.snap
---
source: crates/querygpt-core/tests/pipeline_sql_snapshots.rs
expression: sql
---
SELECT p.id,
       c.id,
       c.name,
       o.id,
       o.name,
       CASE WHEN o.end_date::date < CURRENT_DATE THEN 'EXPIRED' ELSE o.status END,
       o.status,
       o.attributes -> 'countries' AS countries,
       STRING_AGG(DISTINCT opr.product_id, ','),
       o.attributes -> 'packageId' ->> 0 AS package_id
FROM offers_latest o

JOIN campaign_offers co ON o.id = co.offer_id AND o.profile = co.profile
JOIN offer_phases oph ON o.id = oph.offer_id AND o.profile = oph.profile AND o.version = oph.version
JOIN offer_products opr ON o.id = opr.offer_id AND o.profile = opr.profile AND o.version = opr.version
JOIN campaigns_latest c ON co.campaign_id = c.id AND co.profile = c.profile AND co.version = c.version
LEFT JOIN partners p ON c.partner_id = p.id AND c.profile = p.profile
WHERE promo_type = 'PREPAID'
  AND (o.attributes -> 'countries' ?| ARRAY['KR', 'JP', 'TW', 'SG', 'HK'])
  AND o.status IN ('PUBLISHED', 'EXPIRED')
GROUP BY p.id,
         c.id,
         c.name,
         o.id,
         o.name,
         CASE WHEN o.end_date::date < CURRENT_DATE THEN 'EXPIRED' ELSE o.status END,
         o.status,
         o.attributes -> 'countries',
         o.attributes -> 'packageId' ->> 0
ORDER BY p.id ASC,
         c.id ASC,
         o.id ASC
